test/compile_fail/effect_state_get_without_context.zig
const shift = @import("shift");

const fake_cap = struct {};

comptime {
    _ = shift.effect.state.get(fake_cap, 123);
}
